# gstreamer-m2s-integration

./: README.md  build.sh
common/: CMakeLists.txt  tr_offset.c  tr_offset.h
include/: m2s_api.h  m2s_types.h
script/rx/video/: monitor_1080i.sh  monitor_2160p.sh  srt.sh
script/tx/audio/: aac_dec.sh  beep.sh
script/tx/video/: colorbar_1080i.sh  h264_dec_1080i.sh
src/: gstm2saudiosink.cpp  gstm2saudiosink.h  gstm2saudiosrc.cpp  gstm2saudiosrc.h  gstm2svideosink.cpp  gstm2svideosink.h  gstm2svideosrc.cpp  gstm2svideosrc.h
